# esp-gsm-agri-control

./: .gitignore  CMakeLists.txt  README.md  codex_esp.patch  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml
components/analog_input/: CMakeLists.txt  Kconfig  analog_input.c
components/app_logic/: CMakeLists.txt  Kconfig  app_logic.c
components/command_handler/: CMakeLists.txt  command_handler.c
components/config_store/: CMakeLists.txt  config_store.c
components/digital_input/: CMakeLists.txt  Kconfig  digital_input.c
components/eeprom_storage/: CMakeLists.txt  eeprom_storage.c
components/ethernet_manager/: CMakeLists.txt  Kconfig  ethernet_manager.c
components/lcd_display/: CMakeLists.txt  Kconfig  lcd_display.c
components/modem_manager/: CMakeLists.txt  Kconfig  modem_manager.c
components/mqtt_client_wrapper/: CMakeLists.txt  Kconfig  mqtt_client_wrapper.c
components/onewire_sensor/: CMakeLists.txt  Kconfig  onewire_sensor.c
components/relay_control/: CMakeLists.txt  Kconfig  relay_control.c
components/rs485_manager/: CMakeLists.txt  Kconfig  rs485_manager.c
components/rtc_manager/: CMakeLists.txt  Kconfig  rtc_manager.c
components/sd_card_logger/: CMakeLists.txt  Kconfig  sd_card_logger.c
components/sensor_hub/: CMakeLists.txt  Kconfig  dht22.c  sensor_hub.c  soil_moisture.c
components/web_server/: CMakeLists.txt  Kconfig  web_assets.h  web_server.c
components/web_server/include/: web_server.h
docs/: ARCHITECTURE.md  HARDWARE.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
(+20 files in other folders)
